# meerkat-website

./: .dockerignore  .gitattributes  Cargo.toml  Dockerfile  package-lock.json  package.json
.github/workflows/: deploy.yml
demos/diplomacy/app/: index.html  meerkat_web_runtime_bg.wasm  runtime.js
demos/diplomacy/app/assets/: index-COlE8aqt.css  index-aVb2TRK_.js
demos/office/app/: index.html
demos/office/app/assets/: index-BlU5Ws0c.js  index-DawluX6k.css  index-DfMF3Cg2.js
demos/office/app/meerkat-pkg/: meerkat_web_runtime.js
demos/webcm/app/: index.html  webcm.mjs  webcm.wasm
demos/webcm/app/assets/: index-D1FxWrCG.js  index-DpgsRXmb.css
demos/webcm/app/meerkat-pkg/: meerkat_web_runtime.d.ts  meerkat_web_runtime_bg.wasm  meerkat_web_runtime_bg.wasm.d.ts  package.json
scripts/: build-demos.sh
src/: main.rs
templates/: demo_diplomacy.html  demo_office.html  demo_webcm.html  index.html
