[package]
name = "meerkat-website"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }

# Templates (compile-time checked, zero runtime overhead)
askama = "0.13"

# Utilities
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
